--- a/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html
+++ b/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html
@@ -11,8 +11,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350" />
-        <link rel="alternate" href="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350" hreflang="id-ID" />
+        <link rel="canonical" href="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html" />
+        <link rel="alternate" href="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png" />
         <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png" />
         <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png" />
@@ -34,7 +34,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Segini Saldo Minimal di Kangenwin untuk Kemenangan Maksimal 145 Juta di Sugar Rush! Modal Receh, JP Besar dengan Perkalian x350!" />
         <meta property="og:description" content="Temukan strategi terbaik, pola permainan, jam gacor, taktik jitu, dan tips kemenangan maksimal di kasino online Kangenwin dengan RTP live akurat. Modal receh, peluang jackpot besar hingga 145 juta dengan perhitungan x350!" />
-        <meta property="og:url" content="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350" />
+        <meta property="og:url" content="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html" />
         <meta property="og:image" content="https://bebas-berita.github.io/newsshow/Gameplay14.jpg" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Gameplay" />
@@ -151,7 +151,7 @@
             "@type": "Organization",
             "name": "Gameplay",
             "alternateName": "Segini Saldo Minimal di Kangenwin untuk Kemenangan Maksimal 145 Juta di Sugar Rush! Modal Receh, JP Besar dengan Perkalian x350!",
-            "url": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350",
+            "url": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html",
             "logo": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png"
           }
         </script>
@@ -163,12 +163,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350"
+              "item": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Gameplay",
-              "item": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350"
+              "item": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html"
             }]
           }
         </script>
@@ -178,7 +178,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350"
+              "@id": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html"
             },
             "headline": "Segini Saldo Minimal di Kangenwin untuk Kemenangan Maksimal 145 Juta di Sugar Rush! Modal Receh, JP Besar dengan Perkalian x350!",
             "description": "Temukan strategi terbaik, pola permainan, jam gacor, taktik jitu, dan tips kemenangan maksimal di kasino online Kangenwin dengan RTP live akurat. Modal receh, peluang jackpot besar hingga 145 juta dengan perhitungan x350!",
@@ -186,7 +186,7 @@
             "author": {
               "@type": "Organization",
               "name": "Gameplay",
-              "url": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350"
+              "url": "https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -799,7 +799,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350" class="rainbow-text">Gameplay</a>. All Rights Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://bebas-berita.github.io/newsshow/Segini-Saldo-Minimal-di-Kangenwin-untuk-Kemenangan-Maksimal-145-Juta-di-Sugar-Rush-Modal-Receh-JP-Besar-dengan-Perkalian-x350.html" class="rainbow-text">Gameplay</a>. All Rights Reserved.</span></div>
         </section>
       </body>
     </html>
