--- a/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html
+++ b/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html
@@ -11,8 +11,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550" />
-        <link rel="alternate" href="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550" hreflang="id-ID" />
+        <link rel="canonical" href="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html" />
+        <link rel="alternate" href="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png" />
         <link rel="apple-touch-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png" />
         <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png" />
@@ -34,7 +34,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Totok Bangkit Kembali di AAtoto: 5 Pola Menang Maksimal Brutal 222 Juta di Sugar Rush 1000 dengan Perkalian x550!" />
         <meta property="og:description" content="Artikel mendalam mengenai strategi dan tips menang di kasino online, dengan ulasan lengkap mengenai pola, jam bermain gacor, taktik, dan penggunaan RTP live dari AAtoto. Pelajari cara memaksimalkan kemenangan hingga 222 juta di Sugar Rush 1000 dengan perkalian x550." />
-        <meta property="og:url" content="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550" />
+        <meta property="og:url" content="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html" />
         <meta property="og:image" content="https://bebas-berita.github.io/newsshow/Gameplay15.jpg" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Gameplay" />
@@ -151,7 +151,7 @@
             "@type": "Organization",
             "name": "Gameplay",
             "alternateName": "Totok Bangkit Kembali di AAtoto: 5 Pola Menang Maksimal Brutal 222 Juta di Sugar Rush 1000 dengan Perkalian x550!",
-            "url": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550",
+            "url": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html",
             "logo": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQcxQFLsg8TgfGnc9yGXkkbvP65nWEccZBKp_brnUsfV6QxBovhXQoZYOK3MLKBJKdqZinuteG-JyQtYppeAaHUkqPNiadqKYO-2k8N0DdrycMCRTdMDJtZFgRUXLMzT5y18m2jFOmrU_UG0ghtPQgX1k4oZfZEcSYqwloi_XZ-WfGGYveyIh1XVa4dLc/s139/logo.png"
           }
         </script>
@@ -163,12 +163,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550"
+              "item": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Gameplay",
-              "item": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550"
+              "item": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html"
             }]
           }
         </script>
@@ -178,7 +178,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550"
+              "@id": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html"
             },
             "headline": "Totok Bangkit Kembali di AAtoto: 5 Pola Menang Maksimal Brutal 222 Juta di Sugar Rush 1000 dengan Perkalian x550!",
             "description": "Artikel mendalam mengenai strategi dan tips menang di kasino online, dengan ulasan lengkap mengenai pola, jam bermain gacor, taktik, dan penggunaan RTP live dari AAtoto. Pelajari cara memaksimalkan kemenangan hingga 222 juta di Sugar Rush 1000 dengan perkalian x550.",
@@ -186,7 +186,7 @@
             "author": {
               "@type": "Organization",
               "name": "Gameplay",
-              "url": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550"
+              "url": "https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -571,7 +571,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550" class="rainbow-text">Gameplay</a>. All Rights Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://bebas-berita.github.io/newsshow/Totok-Bangkit-Kembali-di-AAtoto-5-Pola-Menang-Maksimal-222-Juta-di-Sugar-Rush-1000-dengan-Perkalian-x550.html" class="rainbow-text">Gameplay</a>. All Rights Reserved.</span></div>
         </section>
       </body>
     </html>
